--- a/freeCodeCamp/BOOTSTRAP/BS_Portifolio/package.json
+++ b/freeCodeCamp/BOOTSTRAP/BS_Portifolio/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "bs_portifolio",
+  "name": "bootstrap-v5",
   "version": "1.0.0",
-  "description": "Aprendendo bootstrap e sass",
+  "description": "learning bootstrap v5 from scratch",
   "main": "index.js",
   "scripts": {
     "compile:sass": "sass --watch scss:assets/css"
   },
   "keywords": [
-    "Bootstrap",
-    "sass"
+    "bootstrap",
+    "bootstrap",
+    "v5",
+    "learn",
+    "bootstrap"
   ],
-  "author": "Clécio",
+  "author": "patrick muriungi",
   "license": "ISC",
   "devDependencies": {
-    "sass": "^1.69.5"
+    "sass": "^1.42.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "autoprefixer": "^10.4.16",
-    "bootstrap": "^5.3.2",
-    "postcss-cli": "^10.1.0"
+    "autoprefixer": "^10.2.4",
+    "bootstrap": "^5.1.1",
+    "postcss-cli": "^8.3.1"
   }
 }
